// Top-level build file where you can add configuration options common to all sub-projects/modules.
plugins {
    id 'com.android.application' version '8.3.2' apply false
    id 'com.android.library' version '8.3.2' apply false
    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
}

task clean(type: Delete) {
    delete rootProject.buildDir
}


ext {
    sdkModel = '530'
    androidXVersion = '1.3.1'
    compileSdk = 34
    targetSdk = 32
    minSdk = 24
    versionCode = 2111196
    versionName = '11.11.96'
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
    jvmTarget = '1.8'
//  ndkVersion = '21.0.6113669'
    okhttpVersion =  '4.11.0'
    appcompatVersion = '1.5.1'
    versionBuildTool = '27.0.3'
    kotlinCoreVersion = '1.7.0'
    materialVersion = '1.6.1'
    constraintlayoutVersion = '2.1.4'
    databindingVersion = '7.3.0'
    batterymeterVersion = '2.0.0'
    ToastUtilsVersion = '11.2'
    rtplibraryVersion = '1.7.7'
    gsonVersion  = '2.8.7'
    junitVersion  = '4.13.2'
    extjunitVersion = '1.1.3'
    espressoCoreVersion = '3.4.0'
}

allprojects {
    repositories {
        google()
        mavenCentral()
        jcenter()
        maven { url "https://jitpack.io" }
        flatDir {
            dirs 'libs'
        }
    }
}
